--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="En Proditel, nos dedicamos a ofrecer soluciones integrales para satisfacer las necesidades tecnológicas y de comunicación de nuestros clientes. Nuestro compromiso es brindar servicios de alta calidad que impulsan el crecimiento y la eficiencia de las empresas en diversos sectores."
     />
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
